@@ -47,7 +47,6 @@ groff_TESTS = \
   src/roff/groff/tests/evc_produces_no_output_if_invalid.sh \
   src/roff/groff/tests/fp_should_not_traverse_directories.sh \
   src/roff/groff/tests/handle_special_input_code_points.sh \
-  src/roff/groff/tests/html_works_with_grn_and_eqn.sh \
   src/roff/groff/tests/initialization_is_quiet.sh \
   src/roff/groff/tests/localization_works.sh \
   src/roff/groff/tests/msoquiet_works.sh \
@@ -59,7 +58,6 @@ groff_TESTS = \
   src/roff/groff/tests/regression_savannah_58162.sh \
   src/roff/groff/tests/regression_savannah_58337.sh \
   src/roff/groff/tests/regression_savannah_59202.sh \
-  src/roff/groff/tests/smoke-test_html_device.sh \
   src/roff/groff/tests/some_escapes_accept_newline_delimiters.sh \
   src/roff/groff/tests/soquiet_works.sh \
   src/roff/groff/tests/string_case_xform_errors.sh \
@@ -67,6 +65,10 @@ groff_TESTS = \
   src/roff/groff/tests/string_case_xform_unicode_escape.sh \
   src/roff/groff/tests/substring_works.sh \
   src/roff/groff/tests/use_point_size_escape_with_single_digit_arg.sh
+if USE_GROHTML
+groff_TESTS += src/roff/groff/tests/html_works_with_grn_and_eqn.sh \
+  src/roff/groff/tests/smoke-test_html_device.sh
+endif
 TESTS += $(groff_TESTS)
 EXTRA_DIST += $(groff_TESTS)
 
